# blazy

./: .gitignore  Examples.ipynb  README.md  makefile  requirements.txt  setup.cfg  setup.py
blazy/: __init__.py  chemistry.py  helpers.py
blazy/phreeqc/: __init__.py  io.py  istarmap.py  montecarlo.py  multiprocessing.py  parser.py  run.py
blazy/resources/test_data/: SolutionKs.csv
docs/source/: conf.py  index.rst
docs/source/background/: PHREEQC_basics.rst  PHREEQC_databases.rst  index.rst  intro.rst  misc.rst  pHscales.rst
docs/source/software/: index.rst  intro.rst
tests/: test_databases.py
